--- a/mistelaflask/templates/admin/events/admin_events_detail.html
+++ b/mistelaflask/templates/admin/events/admin_events_detail.html
@@ -3,7 +3,7 @@
 {% block event_content %}
     <form method="POST" action="/admin/events/detail/{{event.id}}">
         {% from 'admin/events/admin_event_form.html' import event_form %}
-        {{ event_form(event.name, event.description) }}
+        {{ event_form(event) }}
         <button class="button is-block is-info is-medium is-fullwidth">Update event</button>
     </form>
 {% endblock %}
