--- a/mistelaflask/templates/admin/events/admin_events_list.html
+++ b/mistelaflask/templates/admin/events/admin_events_list.html
@@ -6,6 +6,7 @@
             <tr>
                 <th>Actions</th>
                 <th>Id</th>
+                <th>Icon</th>
                 <th>Name</th>
                 <th>Description</th>
             </tr>
@@ -18,6 +19,7 @@
                     <a href="{{ url_for('admin.events_remove', model_id=event.id) }}"><i class="fas fa-trash"></i></a>
                 </td>
                 <td class="has-text-left">{{ event.id}}</td>
+                <td class="has-text-left"><i class="{{event.icon}}">{{event.icon}}</i></td>
                 <td class="has-text-left">{{ event.name }}</td>
                 <td class="has-text-left">{{ event.description }}</td>
             </tr>
