--- a/mistelaflask/templates/admin/invitations/admin_invitations_summary.html
+++ b/mistelaflask/templates/admin/invitations/admin_invitations_summary.html
@@ -7,13 +7,13 @@
             <tr>               
                 <th>Event</th>
                 <th><abbr title="Adults">
-                        <i class="fa fa-2x fa-user-group"></i>
+                        <i class="fa fa-2x fa-user-group" style="vertical-align: top;"></i>
                     </abbr></th>
                 <th><abbr title="Children">
                     <span>
-                        <i class="fa fa-2x fa-children"></i>
+                        <i class="fa fa-2x fa-children" style="vertical-align: top;"></i>
                     </span></abbr></th>
-                <th><abbr title="Babies"><i class="fa fa-2x fa-baby"></i></abbr></th>
+                <th><abbr title="Babies"><i class="fa fa-2x fa-baby" style="vertical-align: top;"></i></abbr></th>
             </tr>
         </thead>
         <tbody>
