--- a/mistelaflask/templates/auth/otp_login.html
+++ b/mistelaflask/templates/auth/otp_login.html
@@ -17,17 +17,17 @@
         <form method="POST" action="/otp">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="text" name="username" placeholder="Your Username" autofocus="">
+                    <input class="input" type="text" name="username" placeholder="Your Username" autofocus="">
                 </div>
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="text" name="otp" placeholder="Your One-Time-Password">
+                    <input class="input" type="text" name="otp" placeholder="Your One-Time-Password">
                 </div>
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Your New Password">
+                    <input class="input" type="password" name="password" placeholder="Your New Password">
                 </div>
             </div>
             <div class="field">
