--- a/mistelaflask/templates/base.html
+++ b/mistelaflask/templates/base.html
@@ -27,11 +27,11 @@
                             </a>
                             {% endif %}
                             {% if current_user.is_authenticated %}
-                            <a href="" class="navbar-item">
-                                Events
+                            <a href="{{ url_for('main.events_list') }}" class="navbar-item">
+                                The event
                             </a>
                             <a href="{{ url_for('main.invitations_list') }}" class="navbar-item">
-                                Invitation
+                                My Invitation
                             </a>
                             <a href="{{ url_for('auth.logout') }}" class="navbar-item">
                                 Logout
