feat(MainEvent): It is now possible to encapsulate all events under a main one and display it in the index page

--- a/mistelaflask/templates/admin/admin.html
+++ b/mistelaflask/templates/admin/admin.html
@@ -27,6 +27,9 @@
                             <a href="{{ url_for('admin.guests_list') }}" class="navbar-item">
                                 Guests
                             </a>
+                            <a href="{{ url_for('admin.main_events_list') }}" class="navbar-item">
+                                Main events
+                            </a>
                             <a href="{{ url_for('admin.events_list') }}" class="navbar-item">
                                 Events
                             </a>
