feat(locations): Added  html templates for locations admin view

--- a/mistelaflask/templates/admin/admin.html
+++ b/mistelaflask/templates/admin/admin.html
@@ -33,6 +33,9 @@
                             <a href="{{ url_for('admin.events_list') }}" class="navbar-item">
                                 Events
                             </a>
+                            <a href="{{ url_for('admin.locations_list') }}" class="navbar-item">
+                                Locations
+                            </a>
                             <a href="{{ url_for('admin.invitations_list') }}" class="navbar-item">
                                 Invitations
                             </a>
