chore: Fixed a few templates and ensure the events in the timeline are only visible to those with rights

--- a/mistelaflask/templates/admin/locations/admin_locations_list.html
+++ b/mistelaflask/templates/admin/locations/admin_locations_list.html
@@ -1,6 +1,7 @@
 {% extends "admin/locations/admin_locations_base.html" %}
 
 {% block location_content %}
+<div class="table-container">
     <table class="table is-striped">
         <thead>
             <tr>
@@ -28,4 +29,5 @@
             {% endfor %}
         </tbody>
     </table>
+</div>
 {% endblock %}
