--- a/mistelaflask/templates/admin/locations/admin_locations_base.html
+++ b/mistelaflask/templates/admin/locations/admin_locations_base.html
@@ -22,7 +22,7 @@
             {% endif %}
             {% endwith %}
             <div class="columns is-mobile is-centered">
-                <div class="column is-half">
+                <div class="column is-10">
                     {% block location_content %}
                     {% endblock %}
                 </div>
