chore(base.html): Added extra tab for otp login

--- a/mistelaflask/templates/base.html
+++ b/mistelaflask/templates/base.html
@@ -41,6 +41,9 @@
                             <a href="{{ url_for('auth.login') }}" class="navbar-item">
                                 Login
                             </a>
+                            <a href="{{ url_for('auth.login_otp') }}" class="navbar-item">
+                                Otp Login
+                            </a>
                             {% endif %}
                         </div>
                     </div>
