--- a/mistelaflask/templates/index.html
+++ b/mistelaflask/templates/index.html
@@ -6,7 +6,7 @@
       {{ main_event.name }}
     </h1>
     <h2 class="subtitle">
-      {{ main_event.main_date | format_datetime("%Y | %m | %d") }}
+      {{ main_event.main_date | format_datetime("%d | %m | %Y") }}
     </h2>
 
     <div class="">
