--- a/mistelaflask/templates/admin/admin.html
+++ b/mistelaflask/templates/admin/admin.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Flask Auth Example</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <script src="https://kit.fontawesome.com/7ccc420639.js" crossorigin="anonymous"></script>
-</head>
+{% include 'header.html' %}
 <body>
-    <section class="hero is-primary is-fullheight">
+    <section class="hero is-fullheight">
 
         <div class="hero-head">
             <nav class="navbar">
