--- a/mistelaflask/templates/header.html
+++ b/mistelaflask/templates/header.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Flask Auth Example</title>
+    <title>{{ "Mistela Flask" | from_mistela_env("MISTELA_TITLE")}}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mistela.css') }}">
     <script src="https://kit.fontawesome.com/7ccc420639.js" crossorigin="anonymous"></script>
