--- a/mistelaflask/templates/navbar.html
+++ b/mistelaflask/templates/navbar.html
@@ -1,7 +1,7 @@
 <div class="hero-head">
     <nav class="navbar">
         <div class="container">
-            <div id="navbarMenuHeroA" class="navbar-menu">
+            <div id="navBarMenu" class="navbar-menu">
                 <div class="navbar-end">
                     <a href="{{ url_for('main.index') }}" class="navbar-item">
                         Home
@@ -32,6 +32,12 @@
                     {% endif %}
                 </div>
             </div>
+            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navBarMenu">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+              </a>
         </div>
     </nav>
 </div>
+
