--- a/mistelaflask/static/css/mistela.css
+++ b/mistelaflask/static/css/mistela.css
@@ -27,6 +27,10 @@ h1.title {
     font-size: 15vw;
 }
 
+title.img {
+    font-size: 20vw;
+}
+
 h2.subtitle {
     font-size: 4rem;
     font-size: 5vw;
