--- a/mistelaflask/templates/header.html
+++ b/mistelaflask/templates/header.html
@@ -5,5 +5,6 @@
     <title>{{ "Mistela Flask" | from_mistela_env("MISTELA_TITLE")}}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mistela.css') }}">
+    <link rel="icon" type="image/png" href="{{url_for('static', filename='img/logo.png')}}">
     <script src="https://kit.fontawesome.com/7ccc420639.js" crossorigin="anonymous"></script>
 </head>
