--- a/mistelaflask/templates/base.html
+++ b/mistelaflask/templates/base.html
@@ -3,7 +3,7 @@
 
 {% include 'header.html' %}
 <body>
-    <div class="mistela-background" style="background-image: url({{url_for('static', filename='img/background.jpg')}})">
+    <div class="mistela-background" style="--background-img: url({{url_for('static', filename='img/background.jpg')}})">
         <section class="hero is-fullheight" >
             {% include 'navbar.html' %}
             <div class="hero-body">
