--- a/mistelaflask/templates/base.html
+++ b/mistelaflask/templates/base.html
@@ -1,60 +1,19 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Flask Auth Example</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <script src="https://kit.fontawesome.com/7ccc420639.js" crossorigin="anonymous"></script>
-</head>
-
+{% include 'header.html' %}
 <body>
-    <section class="hero is-primary is-fullheight">
-
-        <div class="hero-head">
-            <nav class="navbar">
-                <div class="container">
-                    <div id="navbarMenuHeroA" class="navbar-menu">
-                        <div class="navbar-end">
-                            <a href="{{ url_for('main.index') }}" class="navbar-item">
-                                Home
-                            </a>
-                            {% if current_user.admin %}
-                            <a href="{{ url_for('admin.index') }}" class="navbar-item">
-                                Admin page
-                            </a>
-                            {% endif %}
-                            {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.events_list') }}" class="navbar-item">
-                                The event
-                            </a>
-                            <a href="{{ url_for('main.invitations_list') }}" class="navbar-item">
-                                My Invitation
-                            </a>
-                            <a href="{{ url_for('auth.logout') }}" class="navbar-item">
-                                Logout
-                            </a>
-                            {% endif %}
-                            {% if not current_user.is_authenticated %}
-                            <a href="{{ url_for('auth.login') }}" class="navbar-item">
-                                Login
-                            </a>
-                            {% endif %}
-                        </div>
-                    </div>
+    <div class="mistela-background" style="--background-img: url({{url_for('static', filename='img/background.png')}})">
+        <section class="hero is-fullheight" >
+            {% include 'navbar.html' %}
+            <div class="hero-body">
+                <div class="container has-text-centered">
+                {% block content %}
+                {% endblock %}
                 </div>
-            </nav>
-        </div>
-
-        <div class="hero-body">
-            <div class="container has-text-centered">
-               {% block content %}
-               {% endblock %}
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 </body>
 {% include 'footer.html' %}
 </html>
