--- a/mistelaflask/templates/admin/events/admin_events_list.html
+++ b/mistelaflask/templates/admin/events/admin_events_list.html
@@ -9,6 +9,8 @@
                 <!-- <th>Main</th>  -->
                 <th>Icon</th>
                 <th>Name</th>
+                <th>Start</th>
+                <th>Duration</th>
                 <th>Description</th>
             </tr>
         </thead>
@@ -23,6 +25,8 @@
                 <!-- <td class="has-text-left">{{ event.main_event.name}}</td> -->
                 <td class="has-text-left"><i class="{{event.icon}}"></i></td>
                 <td class="has-text-left">{{ event.name }}</td>
+                <td class="has-text-left">{{ event.start_time }}</td>
+                <td class="has-text-left">{{ event.duration }}</td>
                 <td class="has-text-left">{{ event.description }}</td>
             </tr>
             {% endfor %}
