fix(templates/event): it is now possible to add html code into an event description and properly format it with jinja safe

--- a/mistelaflask/templates/admin/events/admin_event_form.html
+++ b/mistelaflask/templates/admin/events/admin_event_form.html
@@ -61,7 +61,7 @@
     </div>  
     <div class="field-body">
         <div class="control">
-            <input value="{{ event.description if event.description }}" class="input" type="text" name="description" placeholder="Description" autofocus="">
+            <textarea value="{{ event.description if event.description }}" class="input" type="text" name="description" placeholder="Description" autofocus="">{{ event.description if event.description }}</textarea>
         </div>
     </div>
 </div>
