--- a/mistelaflask/templates/admin/locations/admin_location_form.html
+++ b/mistelaflask/templates/admin/locations/admin_location_form.html
@@ -35,7 +35,7 @@
     </div>  
     <div class="field-body">
         <div class="control">
-            <textarea value="{{ location.description if location.description }}" class="input" type="text" name="description" placeholder="Description" autofocus=""></textarea>
+            <textarea value="{{ location.description if location.description }}" class="input" type="text" name="description" placeholder="Description" autofocus="">{{ location.description if location.description }}</textarea>
         </div>
     </div>
 </div>
