--- a/mistelaflask/templates/guest/events/guest_event_timeline.html
+++ b/mistelaflask/templates/guest/events/guest_event_timeline.html
@@ -19,7 +19,7 @@
                         {{ _event.name | capitalize }}
                     </p>
                     <div class="content">
-                        {{ _event.description }}
+                        {{ _event.description | safe }}
                     </div> 
                 </div>
             </article>    
