fix(templates/events): Replaced way of adding icons so that more animations are available

--- a/mistelaflask/templates/admin/events/admin_event_form.html
+++ b/mistelaflask/templates/admin/events/admin_event_form.html
@@ -31,7 +31,7 @@
     </div>  
     <div class="field-body">
         <div class="control">
-            <input value="{{ event.icon if event.icon }}" class="input" type="text" name="icon" placeholder="Font-awesome icon" autofocus="">
+            <textarea class="input" type="text" name="icon" placeholder="Font-awesome icon" autofocus="">{{ event.icon if event.icon }}</textarea>
         </div>
     </div>
 </div>
