--- a/mistelaflask/templates/guest/events/guest_event_timeline.html
+++ b/mistelaflask/templates/guest/events/guest_event_timeline.html
@@ -7,7 +7,7 @@
             <article class="tile is-child notification">
                 <div class="content text">
                     <p class="title">
-                        <i class="{{ _event.icon }} fa-3x"></i>
+                        {{_event.icon | safe}}
                     </p>
                 </div>
                 <div class="content text has-text-centered">
